Project

General

Profile

Actions

Bug #23764

closed

MDSMonitor: new file systems are not initialized with the pending_fsmap epoch

Added by Patrick Donnelly about 6 years ago. Updated almost 6 years ago.

Status:
Resolved
Priority:
Normal
Category:
Correctness/Safety
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDSMonitor
Labels (FS):
multifs
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description


Related issues 1 (0 open1 closed)

Copied to CephFS - Backport #23791: luminous: MDSMonitor: new file systems are not initialized with the pending_fsmap epochResolvedPrashant DActions
Actions #1

Updated by Patrick Donnelly about 6 years ago

  • Status changed from New to In Progress
Actions #2

Updated by Patrick Donnelly about 6 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Patrick Donnelly about 6 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Labels (FS) multifs added
Actions #4

Updated by Nathan Cutler about 6 years ago

  • Copied to Backport #23791: luminous: MDSMonitor: new file systems are not initialized with the pending_fsmap epoch added
Actions #5

Updated by Nathan Cutler almost 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF