MDSMonitor: initialize new Filesystem epoch from pending

Fixes: https://tracker.ceph.com/issues/23764

Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>
(cherry picked from commit 9341e4ba01e1641fa7a016698cdf53a28c7af0c7)

Conflicts:
	src/mds/FSMap.cc: Resolved in create_filesystem